# QtWaitingSpinner

./: .gitignore  README.txt  pyproject.toml  setup.cfg
.github/workflows/: tests.yaml
pyqtspinner/: configurator.py  spinner.py
