[metadata]
name = pyqtspinner
version = 2.0.2
description = Waiting spinner for PySide6
author = Denis
author_email = fbjorn@users.noreply.github.com
url = https://github.com/insignito/QtWaitingSpinner
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
install_requires =
    PySide6>=6.4

[options.extras_require]
test =
    pytest==7.4.0
    pytest-qt==4.4.0

[options.packages.find]
where=.

[tool:pytest]
minversion = 7.4
testpaths =
    tests

[options.entry_points]
console_scripts =
    pyqtspinner-conf = pyqtspinner.configurator:main